--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@emotion/native": "^11.10.6",
+    "@emotion/react": "^11.10.6",
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
@@ -18,8 +20,10 @@
     "react-native": "0.71.3",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
+    "react-native-url-polyfill": "^1.3.0",
     "react-redux": "^8.0.5",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "url": "^0.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -49,6 +53,8 @@
     "metro-react-native-babel-preset": "^0.75.1",
     "prettier": "^2.4.1",
     "react-test-renderer": "18.2.0",
+    "reactotron-react-native": "^5.0.3",
+    "reactotron-redux": "^3.1.3",
     "typescript": "4.8.4"
   },
   "jest": {
